--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <org.springframework.version>5.2.2.RELEASE</org.springframework.version>
         <org.projectlombok.version>1.18.2</org.projectlombok.version>
 
+        <javax.faces.version>2.4.0</javax.faces.version>
+        <primefaces.version>7.0</primefaces.version>
     </properties>
 
     <!-- Spring framework -->
@@ -30,6 +32,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
 
         <!-- Lombok -->
         <dependency>
@@ -37,6 +44,24 @@
             <artifactId>lombok</artifactId>
             <version>${org.projectlombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- primefaces -->
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.faces</artifactId>
+            <version>${javax.faces.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>${primefaces.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>1.2</version>
         </dependency>
 
     </dependencies>
